# QuantumGradesApp

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Doxyfile  LEGAL_NOTICE.md  LICENSE  License  Makefile  Makefile_tests  Makefile_wrong  README.md  config.test.json  demo_out.csv  demo_out.json  vcpkg-configuration.json  vcpkg.json
.github/: build.yml  release-drafter.yml
.github/workflows/: build.yml  ci.yml  deprecated_ci.yml  release-drafter.yml  release.yml
changelog/: v.0.7.1.md  v0.3.0.md  v0.4.0.md  v0.5.0-rc2.md  v0.5.0.md  v0.5.1.md  v0.6.0.md  v0.7.0.md  v0.7.1.md  v0.8.0.md  v0.9.0.md
cmake/: version.cmake  version.h.in
cmake/templates/: version.h.in
config/: config.dev.json  config.json  config.prod.json  config.test.json  config.toml  perf_config.json  sp500_config.json
data/: demo.csv  readGrades.txt
docs/: developer_notes.md
examples/: CMakeLists.txt  demo_db_logger_config.cpp  main_backtest.cpp  main_config_grades.cpp
examples/backtest_demo/: CMakeLists.txt  backtest_demo.cpp
examples/grades_demo/: CMakeLists.txt  Grades.cpp  Grades.hpp  grades_demo.cpp
examples/logger_demo/: CMakeLists.txt  Logger.cpp  Logger.hpp  logger_demo.cpp
include/: Config.h  Config.hpp  FileManager.h  Grades.h  Grades.hpp  Logger.h  Platform.h  Platform.hpp  Statistics.h  Statistics.hpp  Version.h  Version.hpp
include/common/: LogLevel.hpp
include/core/: AssetsLocator.hpp  Bootstrap.hpp  Config.hpp  ConfigLocator.hpp  IAppCLI.hpp  Platform.hpp  Statistics.hpp
include/domain/: Instrument.h  Instrument.hpp  Quote.h  Quote.hpp
include/domain/backtest/: BarSeries.h  BarSeries.hpp  Engine.h  Engine.hpp  Execution.h  Execution.hpp  Order.h  Order.hpp  Portfolio.h  Portfolio.hpp  Position.h  Position.hpp  Result.h  Result.hpp  Trade.h  Trade.hpp
include/domain/strategy/: BuyHold.h  IStrategy.h  MACrossover.h
include/ingest/: DataIngest.hpp
include/io/: CsvLoader.h  CsvLoader.hpp  DataExporter.hpp  FileManager.hpp
include/persistence/: DatabaseWorker.hpp  IDataStore.hpp  PersistenceFactory.hpp  SQLiteStore.hpp  Statement.hpp
include/reporting/: IReporter.hpp  ReporterManager.hpp
include/strategy/: BuyHold.h  BuyHold.hpp  IStrategy.h  IStrategy.hpp  MACrossover.h  MACrossover.hpp
include/utils/: ILogger.hpp  Logger.hpp  LoggerFactory.hpp  MockLogger.hpp  NullLogger.hpp  SpdLogger.hpp
sql/migrations/: migrations.sql
src/: CMakeLists.txt  Config.cpp  FileManager.cpp  Grades.cpp  Logger.cpp  Statistics.cpp  main.cpp
src/api/: ApiServer.cpp  ApiServer.hpp  CMakeLists.txt
src/apps/qga_api/: CMakeLists.txt  main.cpp
src/cli/: AppCLI.cpp  AppCLI.hpp  CMakeLists.txt  main_cli.cpp
src/core/: AssetsLocator.cpp  Bootstrap.cpp  CMakeLists.txt  Config.cpp  ConfigLocator.cpp  Statistics.cpp
src/domain/: CMakeLists.txt
src/domain/backtest/: BarSeries.cpp  CMakeLists.txt  Engine.cpp  Order.cpp  Portfolio.cpp  Position.cpp  Trade.cpp
src/ingest/: CMakeLists.txt  DataIngest.cpp
src/io/: CMakeLists.txt  CsvLoader.cpp  DataExporter.cpp  FileManager.cpp
src/persistence/: CMakeLists.txt  DatabaseWorker.cpp  SQLiteStore.cpp  Statement.cpp
src/reporting/: CMakeLists.txt  ReporterManager.cpp
src/strategy/: BuyHold.cpp  CMakeLists.txt  MACrossover.cpp
src/utils/: CMakeLists.txt  Logger.cpp  LoggerFactory.cpp  SpdLogger.cpp
test_tmp_export/: out_range.csv  range.csv  series.csv
tests/: CMakeLists.txt  test_bar_series.cpp  test_cli_integration.cpp  test_config.cpp  test_config_json.cpp  test_data_exporter.cpp  test_data_ingest.cpp  test_extended_logger.cpp  test_filemanager.cpp  test_grades.cpp  test_helpers.hpp  test_logger.cpp  test_main.cpp  test_portfolio.cpp  test_statistics.cpp  test_strategies_macrossover.cpp
tests/data/: test_http.csv
tests/e2e/: CMakeLists.txt  testHttpServer.hpp  test_cli_e2e.cpp  test_data_ingest_http.cpp
tests/fixtures/e2e/: README.md  sample_short.csv
tests/unit/: CMakeLists.txt  test_api_server.cpp  test_bar_series.cpp  test_config_json.cpp  test_data_exporter.cpp  test_data_ingest.cpp  test_extended_logger.cpp  test_file_manager.cpp  test_filemanager.cpp  test_main.cpp  test_portfolio.cpp  test_reporter_manager.cpp  test_statistics_finance.cpp  test_strategies_macrossover.cpp  unit_config.hpp
tools/: run-tidy-fix.sh
tools/profiling/: perf.sh  perf_flamegraph.sh  perf_hotspot.sh  perf_setup.sh
vcpkg_triplets/: x64-windows-static.cmake
